# reviewmaps

./: .gitignore
admin/: .env.example  .gitignore  Dockerfile  pyproject.toml
admin/app_config/: admin.py  apps.py  models.py
admin/campaigns/: admin.py  apps.py  models.py
admin/config/: middleware.py  settings.py  urls.py
admin/keyword_alerts/: admin.py  apps.py  models.py
admin/users/: admin.py  apps.py  backends.py  models.py
server/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  db.sqlite3  entrypoint.sh  go.mod  go.sum  main.py  myrequest.txt  pyproject.toml  requirements.txt
server/.claude/: CLAUDE.md
server/api/: deps.py  security.py
server/api/routers/: campaigns.py  categories.py
server/app_config/: admin.py  api.py  models.py  schemas.py  utils.py
server/app_config/migrations/: 0001_initial.py  0002_ratelimitconfig.py
server/app_config/tests/: __init__.py  test_api.py  test_models.py  test_utils.py  test_version_api.py  test_version_check_api.py
server/backup/: config.py  entrypoint.sh  logging.py  main.py  requirements.txt
server/backup/campaigns/: models.py
server/backup/core/: utils.py
server/backup/db/: crud.py  models.py
server/backup/middlewares/: auth.py  metrics.py
server/backup/schemas/: campaign.py
server/backup/scripts/: validate_performance.py
server/campaigns/: admin.py  api.py  category_api.py  category_schemas.py  health_api.py  models.py  schemas.py
server/cmd/api/: main.go
server/config/: settings.py  urls.py
server/core/: apps.py  logging.py  metrics.py  models.py  scheduler.py
server/db/: crud.py  models.py  session.py
server/docs/: API_DOCUMENTATION.md  DJANGO_ADMIN_HYBRID_ANALYSIS.md  DJANGO_ADMIN_PRACTICAL_SOLUTION.md  DJANGO_NINJA_MIGRATION_ANALYSIS.md  FASTAPI_ADMIN_SOLUTIONS.md  docs.go  swagger.json  swagger.yaml
server/keyword_alerts/: admin.py  api.py  apps.py  firebase_service.py  models.py  schemas.py  signals.py
server/middlewares/: access.py  metrics.py
server/migrations/: add_deleted_at_to_campaign.sql  add_deleted_at_to_keyword_alerts.sql  add_status_to_campaign.sql
server/schemas/: campaign.py  category.py
server/scripts/: test-status-field-api.sh
server/users/: admin.py  api.py  api_me.py  api_social.py  backends.py  models.py  schemas.py  utils.py
(+287 files in other folders)
