[project]
name = "reviewmaps-admin"
version = "1.0.0"
description = "ReviewMaps Django Admin with Unfold Theme"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-unfold>=0.40.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "dj-database-url>=2.2.0",
    "gunicorn>=21.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
